looprpc+cmd: deprecate dynamic terms
We move destination and cltv to QuoteResponse, and deprecate the
non-static fields.

Terms will now only show max/min swap sizes.
